[gd_scene load_steps=27 format=3 uid="uid://dx4r13gqfh13"]

[ext_resource type="Script" path="res://main.gd" id="1_skarq"]
[ext_resource type="Script" path="res://assets/water/wave_cascade_parameters.gd" id="2_pw5n6"]
[ext_resource type="Texture2D" uid="uid://cnft723bala47" path="res://assets/skybox.png" id="3_0ksgj"]
[ext_resource type="Script" path="res://assets/player/camera.gd" id="4_v2yip"]
[ext_resource type="Material" uid="uid://byumtcccq4ew3" path="res://assets/water/mat_water.tres" id="5_lt75t"]
[ext_resource type="ArrayMesh" uid="uid://ix4vp1y05f1s" path="res://assets/water/clipmap_high.obj" id="5_n61pp"]
[ext_resource type="AudioStream" uid="uid://cvvn0vke5comw" path="res://assets/ocean_loop.wav" id="6_jpklm"]
[ext_resource type="Script" path="res://assets/water/water.gd" id="7_s0x5e"]
[ext_resource type="AudioStream" uid="uid://ck6vmandgjhy0" path="res://assets/wind_loop.wav" id="8_6r5si"]
[ext_resource type="Shader" path="res://assets/shaders/spatial/sea_spray.gdshader" id="8_eu8jb"]
[ext_resource type="Material" uid="uid://5xqyddws6rt5" path="res://assets/water/mat_spray.tres" id="9_skbf4"]
[ext_resource type="Texture2D" uid="uid://dtm5tyuh2slqt" path="res://assets/water/sea_spray.png" id="10_spqpo"]
[ext_resource type="Script" path="res://Cube.gd" id="13_gqe2m"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_t7jwl"]
panorama = ExtResource("3_0ksgj")

[sub_resource type="Sky" id="Sky_vroi3"]
sky_material = SubResource("PanoramaSkyMaterial_t7jwl")

[sub_resource type="Environment" id="Environment_icybu"]
background_mode = 2
sky = SubResource("Sky_vroi3")
tonemap_mode = 2
fog_mode = 1
fog_light_color = Color(0.272954, 0.419272, 0.484632, 1)
fog_sun_scatter = 0.05
fog_density = 1.0
fog_aerial_perspective = 0.626
fog_sky_affect = 0.0
fog_depth_curve = 0.25
fog_depth_begin = 200.0
fog_depth_end = 350.0
volumetric_fog_enabled = true
volumetric_fog_density = 0.0
volumetric_fog_length = 256.0
adjustment_enabled = true
adjustment_brightness = 0.85
adjustment_contrast = 1.07
adjustment_saturation = 1.5

[sub_resource type="Resource" id="Resource_adqv5"]
script = ExtResource("2_pw5n6")
tile_length = Vector2(88, 88)
displacement_scale = 1.0
normal_scale = 1.0
wind_speed = 10.0
wind_direction = 20.0
fetch_length = 150.0
swell = 0.8
spread = 0.2
detail = 1.0
whitecap = 0.5
foam_amount = 8.0

[sub_resource type="Resource" id="Resource_luhq0"]
script = ExtResource("2_pw5n6")
tile_length = Vector2(57, 57)
displacement_scale = 0.75
normal_scale = 1.0
wind_speed = 5.0
wind_direction = 15.0
fetch_length = 150.0
swell = 0.8
spread = 0.4
detail = 1.0
whitecap = 0.5
foam_amount = 0.0

[sub_resource type="Resource" id="Resource_83u3u"]
script = ExtResource("2_pw5n6")
tile_length = Vector2(16, 16)
displacement_scale = 0.0
normal_scale = 0.25
wind_speed = 20.0
wind_direction = 20.0
fetch_length = 550.0
swell = 0.8
spread = 0.4
detail = 1.0
whitecap = 0.25
foam_amount = 3.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_k6xhe"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_tsx6q"]
seamless = true
noise = SubResource("FastNoiseLite_k6xhe")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ds3o1"]
render_priority = 0
shader = ExtResource("8_eu8jb")
shader_parameter/max_alpha = 0.666
shader_parameter/albedo_texture = ExtResource("10_spqpo")
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_tsx6q")

[sub_resource type="QuadMesh" id="QuadMesh_06d3e"]

[sub_resource type="FogMaterial" id="FogMaterial_riff4"]
density = 8.0
albedo = Color(0.988718, 0.989631, 0.989629, 1)
height_falloff = 0.176
edge_fade = 1.75

[sub_resource type="BoxShape3D" id="BoxShape3D_guuf1"]

[sub_resource type="BoxMesh" id="BoxMesh_ui7mw"]

[node name="Main" type="Node3D"]
script = ExtResource("1_skarq")

[node name="Environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_icybu")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.945601, -0.0516921, 0.321197, -0.00840572, 0.983084, 0.18296, -0.325221, -0.175707, 0.929171, 0, 10, 0)
shadow_bias = 0.0
shadow_normal_bias = 6.464
shadow_opacity = 0.8
shadow_blur = 5.0

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(-0.996195, -0.0151344, 0.0858316, 0, 0.984807, 0.173648, -0.0871557, 0.172987, -0.981061, 0, 10, -25)
script = ExtResource("4_v2yip")

[node name="Water" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 14)
sorting_offset = 999.0
material_override = ExtResource("5_lt75t")
cast_shadow = 0
mesh = ExtResource("5_n61pp")
skeleton = NodePath("")
script = ExtResource("7_s0x5e")
parameters = Array[ExtResource("2_pw5n6")]([SubResource("Resource_adqv5"), SubResource("Resource_luhq0"), SubResource("Resource_83u3u")])

[node name="WaterSprayEmitter" type="GPUParticles3D" parent="Water"]
transform = Transform3D(15, 0, 0, 0, 15, 0, 0, 0, 15, 0, 0, 0)
material_override = SubResource("ShaderMaterial_ds3o1")
cast_shadow = 0
amount = 32768
lifetime = 6.0
process_material = ExtResource("9_skbf4")
draw_pass_1 = SubResource("QuadMesh_06d3e")

[node name="FogVolume" type="FogVolume" parent="."]
shape = 4
material = SubResource("FogMaterial_riff4")

[node name="OceanAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_jpklm")
volume_db = 15.0
autoplay = true

[node name="WindAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6r5si")
volume_db = -30.0
autoplay = true

[node name="RigidBody3D" type="RigidBody3D" parent="."]
script = ExtResource("13_gqe2m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("BoxShape3D_guuf1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D"]
mesh = SubResource("BoxMesh_ui7mw")
